log
Thu May  5 11:13:12 HSP 2022: 
 heap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
9c36184
Thu May  5 11:15:51 HSP 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
011ff7e
Thu May  5 11:19:01 HSP 2022: 
 heap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
5ff3c1f
Thu May  5 11:20:01 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3e9b821
Thu May  5 11:24:11 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:21:25: error: incompatible types when returning type 'heapElem {aka struct nodo}' but 'void *' was expected
     return pq->heapArray[0];
            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
fdaba1d
